@@ -1,10 +1,6 @@
 # Add files with translateable strings here.
 # Please keep this file sorted alphabetically.
 [encoding: UTF-8]
-capplets/about-me/e-image-chooser.c
-capplets/about-me/gnome-about-me-password.c
-capplets/about-me/gnome-about-me.c
-capplets/about-me/gnome-about-me.glade
 capplets/accessibility/at-properties/at-enable-dialog.glade
 capplets/accessibility/at-properties/at-properties.desktop.in.in
 capplets/accessibility/at-properties/main.c
@@ -29,9 +25,6 @@ capplets/default-applications/gnome-default-applications-properties.glade
 capplets/display/display-properties.desktop.in.in
 capplets/display/main.c
 capplets/file-types/file-types-capplet.c
-capplets/file-types/file-types-capplet.desktop.in.in
-capplets/file-types/file-types-properties.glade
-capplets/file-types/file-types.desktop.in.in
 capplets/file-types/mime-category-edit-dialog.c
 capplets/file-types/mime-edit-dialog.c
 capplets/file-types/mime-type-info.c
@@ -53,7 +46,6 @@ capplets/keyboard/gnome-keyboard-properties-xkbpv.c
 capplets/keyboard/gnome-keyboard-properties.c
 capplets/keyboard/gnome-keyboard-properties.glade
 capplets/keyboard/keyboard.desktop.in.in
-capplets/localization/localization.desktop.in.in
 capplets/mouse/gnome-mouse-properties.c
 capplets/mouse/gnome-mouse-properties.glade
 capplets/mouse/gnome-settings-mouse.desktop.in.in
@@ -73,12 +65,9 @@ capplets/theme-switcher/theme-properties.glade
 capplets/ui-properties/gnome-ui-properties.c
 capplets/ui-properties/gnome-ui-properties.desktop.in.in
 capplets/ui-properties/gnome-ui-properties.glade
-capplets/url-properties/url-properties.desktop.in.in
-capplets/url-properties/url.desktop.in.in
 capplets/windows/gnome-window-properties.c
 capplets/windows/gnome-window-properties.glade
 capplets/windows/window-properties.desktop.in.in
-control-center/GNOME_ControlCenter.server.in
 control-center/control-center-categories.c
 control-center/control-center.c
 control-center/gnomecc.desktop.in.in
@@ -103,7 +92,6 @@ libwindow-settings/metacity-window-manager.c
 schemas/apps_gnome_settings_daemon_default_editor.schemas.in
 schemas/apps_gnome_settings_daemon_keybindings.schemas.in
 schemas/apps_gnome_settings_daemon_screensaver.schemas.in
-schemas/desktop_gnome_font_rendering.schemas.in
 schemas/desktop_gnome_peripherals_keyboard_xkb.schemas.in
 typing-break/drw-break-window.c
 typing-break/drwright.c
