@@ -1,3 +1,9 @@
+2005-02-09  Sebastien Bacher  <seb128@debian.org>
+
+	* POTFILES.in:
+	* POTFILES.skip:
+	moved some files to fix the tarball build.
+
 2005-02-09  Leonid Kanter <leon@asplinux.ru>
 
 	* ru.po: Updated Russian translation
